setup the hero selector and formation lvl

--- a/boy-helper-core/jsconfig.json
+++ b/boy-helper-core/jsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@src/*": ["src/*"]
+      "@src/*": ["src/*"],
+      "@FormationHelper/*": ["src/formation_helper/*"]
     }
   },
   "exclude": ["node_modules", "dist"]
