--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
     "git": {
       "productionBranch": "main"
-    }
+    },
+    "builds": [
+        {
+          "src": "boy-helper-core/package.json",
+          "use": "@vercel/node"
+        }
+      ],
+      "routes": [
+        { "src": "/(.*)", "dest": "boy-helper-core/$1" }
+      ]
   }
