--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,8 @@
           "use": "@vercel/node"
         }
       ],
-      "routes": [
-        { "src": "/(.*)", "dest": "boy-helper-core/$1" }
-      ]
+    "routes": [
+    { "src": "/(.*)", "dest": "boy-helper-core/$1" }
+    ],
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
   }
