fix the vite config fuk

--- a/boy-helper-core/package.json
+++ b/boy-helper-core/package.json
@@ -19,7 +19,8 @@
     "start": "vite",
     "build": "vite build",
     "test": "npm run test",
-    "eject": "npm run eject"
+    "eject": "npm run eject",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
