--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
     "@vitejs/plugin-react": "^4.3.3",
+    "crypto-js": "^4.2.0",
+    "lz-string": "^1.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
