--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.3.2",
+    "@vercel/blob": "^0.25.1",
+    "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.0.14",
     "@vitejs/plugin-react": "^4.3.3",
     "crypto-js": "^4.2.0",
@@ -19,6 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "vite --mode development",
     "start": "vite",
     "build": "vite build",
     "test": "npm run test",
@@ -46,6 +49,8 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.9",
     "@eslint/js": "^9.13.0",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
