--- a/vercel.json
+++ b/vercel.json
@@ -17,9 +17,6 @@
       ]
     }
   ],
-  {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
-    ]
-  }
+
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
