--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "boy-helper-core",
   "version": "0.9.9",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
