--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boy-helper-core",
-  "version": "0.1.7",
+  "version": "0.2.0",
   "private": true,
   "type": "module",
   "dependencies": {
@@ -13,6 +13,7 @@
     "@vercel/speed-insights": "^1.0.14",
     "@vitejs/plugin-react": "^4.3.3",
     "crypto-js": "^4.2.0",
+    "js-cookie": "^3.0.5",
     "lz-string": "^1.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
